      writing to them, so we avoid queueing 4+ megabytes of data before
      trying to flush.

  o Major bugfixes (NT services):
    - Install as NT_AUTHORITY\LocalService rather than as SYSTEM; add a
      command-line flag so that admins can override the default by saying
      "tor --service install --user "SomeUser"".  This will not effect
      existing installed services.

  o Major bugfixes (other):
    - Previously, we would cache up to 16 old networkstatus documents
      indefinitely, if they came from nontrusted authorities. Now we
      discard them if they are more than 10 days old.
    - Fix a crash bug in the presence of DNS hijacking (reported by Andrew
      Del Vecchio).
    - Detect and reject malformed DNS responses containing circular
      pointer loops.
    - If exits are rare enough that we're not marking exits as guards,
      ignore exit bandwidth when we're deciding the required bandwidth
      to become a guard.
    - When we're handling a directory connection tunneled over Tor,
      don't fill up internal memory buffers with all the data we want
      to tunnel; instead, only add it if the OR connection that will
      eventually receive it has some room for it. (This can lead to
      slowdowns in tunneled dir connections; a better solution will have
      to wait for 0.2.0.)

  o Minor bugfixes (dns):
    - Add some defensive programming to eventdns.c in an attempt to catch
      possible memory-stomping bugs.
    - Detect and reject DNS replies containing IPv4 or IPv6 records with
      an incorrect number of bytes. (Previously, we would ignore the
      extra bytes.)
    - Fix as-yet-unused reverse IPv6 lookup code so it sends nybbles
      in the correct order, and doesn't crash.
    - Free memory held in recently-completed DNS lookup attempts on exit.
      This was not a memory leak, but may have been hiding memory leaks.
    - Handle TTL values correctly on reverse DNS lookups.